--- a/public/pages/agenda.html
+++ b/public/pages/agenda.html
@@ -192,7 +192,7 @@
                     .replace('{{statusDisplayText}}', 
                         status.split(' ').map(function(statusWord){
                             return statusWord.charAt(0).toUpperCase() + statusWord.slice(1).toLowerCase();
-                        })
+                        }).join(' ')
                     );
               }));
           };
